fixed some layout issues

--- a/public/css/cart/cart.index.css
+++ b/public/css/cart/cart.index.css
@@ -79,3 +79,7 @@ input[type=submit] {
     text-decoration: none;
     color: #000000;
 }
+.prod-info-seg{
+    padding-top: 75px;
+    display: block;
+}
